# iRR_public

./: .gitignore  .gitmodules  Algo.cpp  Algo.h  AlgoSelection.cpp  AlgoSelection.h  Analyze.cpp  Analyze.h  CM.cpp  CM.h  CMakeLists.txt  CMakePresets.json  FO.cpp  FO.h  GAL40_10.xml  GAL40_20.xml  Graph.cpp  Graph.h  GreedyMatching.cpp  GreedyMatching.h  GurSolver.cpp  GurSolver.h  Heuristic.cpp  Heuristic.h  Heuristic_CM.cpp  Heuristic_CM.h  ILS.cpp  ILS.h  InitialSolution.cpp  InitialSolution.h  Input.cpp  Input.h  InstanceGenerator.h  LICENSE  Makefile  Meta.cpp  Meta.h  MiaoAlgo.cpp  MiaoAlgo.h  MiaoHockey.h  (+47 more)
Ablation/: min.csv  results.csv
Ablation/Iteration_1/: Source-BRA24_12.xml-3.stdout  Source-BRA24_12.xml-4.stdout  Source-BRA24_18.xml-2.stdout  Source-BRA24_18.xml-4.stdout  Source-BRA24_6.xml-3.stdout  Source-CIRC40_10.xml-2.stdout  Source-CIRC40_10.xml-5.stdout  Source-CIRC40_20.xml-1.stdout  Source-CIRC40_20.xml-3.stdout  Source-CIRC40_20.xml-4.stdout  Source-CIRC40_20.xml-5.stdout  Source-CIRC40_30.xml-1.stdout  Source-CON40_10.xml-1.stdout  Source-CON40_10.xml-2.stdout  Source-CON40_10.xml-5.stdout  Source-CON40_30.xml-1.stdout  Source-CON40_30.xml-3.stdout  Source-CON40_30.xml-4.stdout  Source-GAL40_10.xml-2.stdout  Source-GAL40_10.xml-4.stdout  Source-GAL40_30.xml-1.stdout  Source-GAL40_30.xml-2.stdout  Source-GAL40_30.xml-3.stdout  Source-INCR40_10.xml-3.stdout  Source-INCR40_10.xml-4.stdout  Source-INCR40_20.xml-2.stdout  Source-INCR40_30.xml-5.stdout  Source-LINE40_10.xml-1.stdout  Source-LINE40_20.xml-3.stdout  Source-LINE40_30.xml-4.stdout  Source-LINE40_30.xml-5.stdout  Source-NFL32_16.xml-2.stdout  Source-NFL32_16.xml-4.stdout  Source-NFL32_16.xml-5.stdout  Source-NFL32_24.xml-1.stdout  Source-NFL32_24.xml-2.stdout  Source-NFL32_24.xml-4.stdout  Source-NFL32_24.xml-5.stdout  Source-NFL32_8.xml-1.stdout  Source-NFL32_8.xml-2.stdout  (+240 more)
Ablation/Iteration_2/: Retuned-BRA24_12.xml-1.stderr  Retuned-BRA24_12.xml-1.stdout  Retuned-BRA24_12.xml-2.stderr  Retuned-BRA24_12.xml-2.stdout  Retuned-BRA24_12.xml-3.stderr  Retuned-BRA24_12.xml-3.stdout  (+680 more)
Code_Benders/: .gitignore  Makefile  README  compile.sh  genJobScripts.sh
InitialSolutions/: README.txt
Irace/: README.md  parameters-SA.txt  runIraceSA.sh.o59804387  runIraceSA.sh.o59816527  runIraceSA.sh.o59821706  runIraceSA.sh.o59823912  runIraceSA.sh.o59825791  runIraceSA.sh.o59828470  runIraceSA.sh.oFinalIter  scenario.txt
Patterns/: NL11.xml  NL13.xml  NL16.xml  NL4.xml  NL5.xml  NL6.xml  NL7.xml  NL8.xml  README.txt  patterns_10_0.txt  patterns_10_1.txt  patterns_10_2.txt  patterns_10_3.txt  patterns_10_all.txt  patterns_12_0.txt  patterns_12_1.txt  patterns_12_2.txt  patterns_12_3.txt  patterns_12_all.txt  patterns_14_0.txt  patterns_14_1.txt  patterns_14_2.txt  patterns_14_3.txt  patterns_14_all.txt  patterns_14_c.txt  patterns_16_0.txt  patterns_16_1.txt  patterns_16_2.txt  patterns_16_3.txt  patterns_16_all.txt  patterns_18_0.txt  patterns_18_1.txt  patterns_18_2.txt  patterns_18_3.txt  patterns_18_all.txt  patterns_20_3.txt  patterns_20_all.txt  patterns_24_3.txt  patterns_24_all.txt  patterns_30_3.txt  (+12 more)
VizTrips/: .gitignore  README.txt  viz.py
cmake/: FindBoost.cmake  FindGUROBI.cmake
(+18033 files in other folders)
